--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -267,3 +267,4 @@ jobs:
           uses: devcontainers/ci@v0.3
           with:
             runCmd: velocitas upgrade --dry-run
+            push: never
